# tiny-qwen

./: .gitignore  CLAUDE.md  README.md  README_CN.md  README_zh.md  model.py  processor.py  pyproject.toml  requirements.txt  run.py  test.py  util.py
data/: anthropic.py  slimpajama.py
model/: model.py  processor.py  util.py  vision.py
model/cortex/: func_net.py  reservoir_local_connectivity.py
models/: config.py  mixin.py  model.py  processor.py  vision.py
test/: test_inference.py
train/: train_continual_pretrain.py  train_mnist.py  train_pretrain.py  train_sft.py
