[project]
name = "tiny-qwen"
version = "0.1.0"
description = "A minimal, easy-to-read PyTorch re-implementation of Qwen3 and Qwen2.5-VL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "safetensors==0.5.3",
    "datasets==3.6.0",
    "tokenizers==0.21.1",
    "huggingface_hub==0.31.1",
    "accelerate==1.6.0",
    "pillow==11.2.1",
    "matplotlib==3.10.3",
    "typer==0.15.3",
    "rich==14.0.0",
    "questionary==2.0.1",
    "lightning>=2.0.0",
    "wandb>=0.16.0",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model", "data", "train"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
